2003-12-31  Mark Kettenis  <kettenis@gnu.org>

	* sparc-tdep.h (sparc_sol2_pc_in_sigtramp): New prototype.
	* sparc-sol2-tdep.c (sparc_sol2_pc_in_sigtramp): Make global.

	* config/sparc/nm-sol2.h (TARGET_CAN_USE_HARDWARE_WATCHPOINT):
	Remove define.  Adjust comment.

2003-12-29  Mark Kettenis  <kettenis@gnu.org>

	* sparcnbsd-tdep.c (sparc32nbsd_sigcontext_frame_cache): Fix comment.
	* sparc64fbsd-tdep.c (sparc64fbsd_sigtramp_frame_cache): Fix
	comment.  Use FPRS_FEF instead of hard-coded constant.

	* sparc-sol2-tdep.c (sparc_sol2_pc_in_sigtramp): Recognize
	ucbvechandler.
	(sparc32_sol2_sigtramp_frame_cache): Call sparc_frame_cache
	instead of sparc32_frame_cache.  Use the unwound stack pointer to
	find `in' and `local' registers.

	* config/sparc/nm-sol2.h [NEW_PROC_API]
	(TARGET_HAS_HARDWARE_WAITCHPOINTS): Define.
	(TARGET_CAN_USE_HARDWARE_WATCHPOINT): Define to 1.
	(TARGET_REGION_SIZE_OK_FOR_HW_WATCHPOINT): Define to 1.
	(HAVE_CONTINUABLE_WATCHPOINT): Define to 1.
	(procfs_stopped_by_watchpoint): New prototype.
	(STOPPED_BY_WATCHPOINT): New define.
	(procfs_set_watchpoint): New prototype.
	(target_insert_watchpoint, target_remove_watchpoint): Define using
	procfs_set_watchpoint.

2003-12-28  Mark Kettenis  <kettenis@gnu.org>

	* sparcnbsd-tdep.c: Include "frame.h", "frame-unwind.h",
	"symtab.h", "trad-frame.h" and "gdb_assert.h".
	(sparc32nbsd_sigtramp_start, sparc32nbsd_sigtramp_end): New
	variables.
	(sparc32nbsd_pc_in_sigtramp, sparc32nbsd_sigcontext_frame_cache)
	(sparc32nbsd_sigcontext_frame_this_id)
	(sparc32nbsd_sigcontext_frame_prev_register): New functions.
	(sparc32nbsd_sigcontext_frame_unwind): New variable.
	(sparc32nbsd_sigtramp_frame_sniffer): New function.
	(sparc32nbsd_init_abi): Set pc_in_sigtramp to
	sparc32nbsd_pc_in_sigtramp, and append
	sparc32nbsd_sigtramp_frame_sniffer.
	(sparc32nbsd_elf_init_abi): Don't set pc_in_sigtramp here.

2003-12-27  Mark Kettenis  <kettenis@gnu.org>

	* sparc64nbsd-nat.c (sparc64nbsd_gregset_supplies_p)